Start HomeView Module

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class="container cover-img">
+<div class="app-container cover-img">
 	<header class="app-header">
 		<h1 class="app-title">Notes</h1>
 		<div class="app-editor">
@@ -19,7 +19,7 @@
 		</div>
 	</header>
 
-	<div class="note-pad">
+	<!-- <div class="note-pad">
 		<div class="note-pad-sheet">
 			<div class="note">
 				<header class="note-header">
@@ -28,40 +28,8 @@
 				</header>
 				<p class="note-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
-
-			<div class="note">
-				<header class="note-header">
-					<h2 class="note-title">Title of Note</h2>
-					<p class="note-date">6/12/2020</p>
-				</header>
-				<p class="note-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
-
-			<div class="note">
-				<header class="note-header">
-					<h2 class="note-title">Title of Note</h2>
-					<p class="note-date">6/12/2020</p>
-				</header>
-				<p class="note-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
-
-			<div class="note">
-				<header class="note-header">
-					<h2 class="note-title">Title of Note</h2>
-					<p class="note-date">6/12/2020</p>
-				</header>
-				<p class="note-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
-
-			<div class="note">
-				<header class="note-header">
-					<h2 class="note-title">Title of Note</h2>
-					<p class="note-date">6/12/2020</p>
-				</header>
-				<p class="note-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			</div>
 		</div>
-	</div>
+	</div> -->
 </div>
 
 </body>
