--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,14 @@
 			</div>
 		</div>
 	</div> -->
+
+	<!-- <div class="new-pad">
+		<input class="title-field" type="text" name="title" placeholder="Title">
+
+		<textarea class="note-field"></textarea>
+
+		<button type="button">Cancel</button>
+	</div> -->
 </div>
 
 </body>
