--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="css/style.css">
 <!-- <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon"> -->
+<script src="https://kit.fontawesome.com/52725b28c5.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 <title>Notes</title>
 </head>
