Refactor Header in a View File and Relink All Header Calls

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,7 @@
 </head>
 <body>
 
-<div class="app-container cover-img">
-	<header class="app-header">
-		<h1 class="app-title">Notes</h1>
-	</header>
-</div>
+<div id="app"></div>
 
 </body>
 </html>
